--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+
     <string name="app_name">People</string>
 
     <!-- TODO: Remove or change this placeholder text -->
@@ -8,4 +9,14 @@
     <string name="login_hint_username">username</string>
     <string name="login_hint_password">password</string>
     <string name="login_login">Login</string>
+
+    <!--permissions on camera use-->
+    <string name="dialog_title_permission">Importante</string>
+    <string name="dialog_message_permission">Da acceso a la cámara para el correcto uso de..</string>
+    <string name="dialog_label_ok_permission">Ok</string>
+    <string name="dialog_label_cancel_permission">No</string>
+
+    <!-- Permissions on snackbar-->
+    <string name="snack_message_camera_persmissions">Habilitar el uso de la cámara</string>
+    <string name="snack_label_camera_setting">Habilitar</string>
 </resources>
