ANDCOMEX-9 #to do

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,8 @@
     <!--Pantalla de login-->
     <string name="login_label_register">Sing up</string>
     <string name="login_label_logEmail">Log in</string>
+
+    <!-- error http  override messages-->
+    <!--<string name="message_http_400">Bad Request - people app </string>-->
+
 </resources>
