--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,6 @@
     <string name="login_label_logEmail">Log in</string>
 
     <!-- error http  override messages-->
-    <string name="message_http_400">Bad Request - people app </string>
+    <!--<string name="message_http_400">Bad Request - people app </string>-->
 
 </resources>
