--- a/permissions/src/main/res/values/strings.xml
+++ b/permissions/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Permissions</string>
+    <string name="permissions_dialog_title_default">Permiso requerido</string>
+    <string name="permissions_dialog_message_default">Este permiso es requerido para que la aplicación funcione correctamente</string>
+    <string name="permissions_dialog_positive_button">Aceptar</string>
+    <string name="permissions_dialog_negative_button">Cancelar</string>
 </resources>
